# multi-agent-newsroom

./: .gitignore  PLAN.md  README.md  REQUIREMENT.md  cli.py  pyproject.toml
agents/: archive_agent.py  formatter.py  orchestrator.py  realtime_agent.py
formatting/: templates.py
mcp_servers/: archive_server.py
services/: state.py
tests/: test_formatter.py  test_integrations.py  test_tools.py
tools/: mcp_archive.py  web_search.py
ui/: app.py  streamlit_app.py
