[project]
name = "agentic-newsroom-demo"
version = "0.1.0"
description = "Demo multi-agent newsroom workflow built on Mistral"
authors = [{name = "Mistral Demo"}]
requires-python = ">=3.11"
dependencies = [
    "mistralai>=1.12.0",
    "mcp>=1.1.1",
    "griffe>=0.48.0",
    "anyio>=4.0.0",
    "pydantic>=2.6.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "fastapi>=0.110.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
ui = ["uvicorn[standard]>=0.27.0"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
